[package]
name = "fractal-toy"
version = "0.1.0"
authors = ["Tom Smeets <tom.tsmeets@gmail.com>"]
edition = "2018"
license = "GPL-v2"

[dependencies]
bytemuck = "1.5"
cgmath = "0.18"
crossbeam-channel = "0.5"
image = "0.23"
pollster = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
structopt = "0.3"
wgpu = "0.9"
winit = "0.25"
