[package]
name = "fractal-toy"
version = "0.1.0"
authors = ["Tom Smeets <tom.tsmeets@gmail.com>"]
edition = "2021"
license = "GPL-v2"

[dependencies]
bytemuck = "1.5"
cgmath = "0.18"
crossbeam-channel = "0.5"
image = "0.24"
include_dir = "0.7"
instant = "0.1.9"
lazy_static = "1.4.0"
num_cpus = "1.13"
phf = "0.11.1"
pollster = "0.2"
rusttype = "0.9"
serde = { version = "1.0", features = [ "derive" ] }
structopt = "0.3"
wgpu = "0.11"
winit = { version = "0.27", features = [] }

[profile.dev.package.rusttype]
opt-level = 3

[profile.dev.package.cgmath]
opt-level = 3
