[package]
name = "fractal_art"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rand  = { version = "0.7", features = [ "small_rng" ] }
xcb   = "0.9.0"
clap  = "2.33.0"


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
