[package]
name = "fractal-toy"
version = "0.1.0"
authors = ["TomSmeets <tom.tsmeets@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
required-features = [ "platform-web" ]

[features]
default = [
    "builder-threaded",
    "builder-ocl",
]

platform-web = ["builder-single",                  "stdweb", "stdweb-derive", "base64" ]

builder-ocl      = [ "ocl" ]
builder-threaded = []
builder-single   = []


[dependencies]
tilemap = { path = "../tilemap" }
ui = { path = "../ui" }
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
cgmath     = { version = "0.17", features = [ "serde" ] }
rand       = { version = "0.7" }
crossbeam-channel = { version = "0.4" }
ocl           = { version = "0.19", optional = true }
stdweb        = { version = "0.4",  optional = true }
stdweb-derive = { version = "0.5",  optional = true }
png           = { version = "0.16" }
base64        = { version = "0.12", optional = true }
