[package]
name = "fractal-toy"
version = "0.1.0"
authors = ["TomSmeets <tom.tsmeets@gmail.com>"]
edition = "2018"

[features]
default = [
    "builder-threaded",
    "builder-ocl",
]

builder-ocl      = [ "ocl" ]
builder-threaded = []
builder-single   = []

[dependencies]
tilemap = { path = "../tilemap" }
ui      = { path = "../ui" }

serde             = { version = "1.0", features = [ "derive" ] }
serde_json        = { version = "1.0" }
cgmath            = { version = "0.17", features = [ "serde" ] }
rand              = { version = "0.7" }
crossbeam-channel = { version = "0.4" }
png               = { version = "0.16" }

ocl = { version = "0.19", optional = true }
