[package]
name = "fractal-toy"
version = "0.1.0"
authors = ["TomSmeets <tom.tsmeets@gmail.com>"]
edition = "2018"
license = "GPL-v3-or-later"

[features]
static = [ "sdl2/static-link", "sdl2/bundled" ]

[dependencies]
tilemap = { path = "../tilemap" }
ui      = { path = "../ui" }

serde             = { version = "1.0", features = [ "derive" ] }
serde_json        = { version = "1.0" }
cgmath            = { version = "0.17", features = [ "serde" ] }
crossbeam-channel = { version = "0.4" }
num_cpus          = { version = "1.13" }
sdl2  = { version = "0.34", features = [ "unsafe_textures" ] }
png   = { version = "0.16" }
