[package]
name = "io"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"

[dependencies]
winit = "0.21"

[[bin]]
name = "io"
path = "main.rs"

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
