[package]
name = "maze"
version = "0.1.0"
authors = ["Tom Smeets <tom.tsmeets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "backend-fancy" ]
backend-fancy = [ "termion" ]

[dependencies]
rand = "0.7"
clap = "2.33"
structopt = "0.3"
termion = { version = "1.5", optional = true }
