[package]
name = "serial"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"
default-run = "linux"

[lib]
path = "src/lib.rs"
crate_type = [ "lib", "cdylib" ]

[[bench]]
name = "fractal"
harness = false

[[bin]]
name = "runner"
required-features = [ "dynamic" ]

[features]
default = [ ]
dynamic = [ "libloading" ]
static = [ "sdl2/static-link", "sdl2/bundled" ]

[dependencies]
serde      = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
bincode    = "1.0"
sdl2       = { version = "0.33", features = [ "unsafe_textures" ] }
num        = "0.2"
cgmath     = { version = "0.17", features = [ "serde" ] }
rand       = "0.7"
palette    = "0.5.0"
# rug        = "1.7.0"
libloading = { version = "0.5", optional = true }
rusttype  = "0.8.2"

# winit             = "0.21" does not support gamepads yet :(
# glx-hal (or gfx?) = we are doing fine with simple sdl rednerer by now

[dev-dependencies]
criterion = "0.3"
