[package]
name = "serial"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"
default-run = "linux"

[lib]
path = "src/lib.rs"
crate_type = [ "lib" ]

[[bench]]
name = "fractal"
harness = false

[[bin]]
name = "web"
required-features = [ "web" ]

[features]
default = [ ]
web = []
static = [ "sdl2/static-link", "sdl2/bundled" ]

# TODO: it might be time to move away from sdl2
# lets stay away from vulkan for now.
# glium + glutin + gilrs seems to work ok
[dependencies]
serde      = { version =  "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
sdl2       = { version = "0.33", features = [ "unsafe_textures" ] }
cgmath     = { version = "0.17", features = [ "serde" ] }
rand       = "0.7"
rusttype  = "0.8"
# bincode    = "1.0"
# num        = "0.2"
# rug        = "1.7.0"
# winit             = "0.21" # does not support gamepads yet :(
# glx-hal (or gfx?)  we are doing fine with simple sdl rednerer by now

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true
