[package]
name = "serial"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"
default-run = "dev"

[lib]
path = "src/lib.rs"
crate_type = [ "lib" ]

[[bin]]
name = "web"
required-features = [ "web" ]

[features]
default = [ "ocl" ]
web = []
static = [ "sdl2/static-link", "sdl2/bundled" ]

# TODO: it might be time to move away from sdl2
# lets stay away from vulkan for now.
# glium + glutin + gilrs seems to work ok
[dependencies]
serde      = { version =  "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
sdl2       = { version = "0.33", features = [ "unsafe_textures" ] }
cgmath     = { version = "0.17", features = [ "serde" ] }
rand       = "0.7"
rusttype  = "0.8"
ocl = { version = "0.19", optional = true }

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true
