[package]
name = "tilemap"
version = "0.1.0"
authors = ["Tom Smeets <tom.tsmeets@gmail.com>"]
edition = "2018"
license = "GPL-v3-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
serde = { version = "1.0", features = [ "derive" ] }
