[package]
name = "ui"
version = "0.1.0"
authors = ["Tom Smeets <tom.tsmeets@gmail.com>"]
edition = "2018"
license = "GPL-v3-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
crc32fast = "1.2"

[dev-dependencies]
termion = "1.5"
