[package]
name = "web"
version = "0.1.0"
authors = ["TomSmeets <tom.tsmeets@gmail.com>"]
edition = "2018"

[dependencies]
tilemap     = { path = "../tilemap" }
ui          = { path = "../ui" }
fractal-toy = { path = "../fractal", default-features = false, features = [ "builder-single" ] }
stdweb        = "0.4"
stdweb-derive = "0.5"
base64        = "0.12"
