[package]
name = "gl"
version = "0.1.0"
authors = ["TomSmeets <tom.tsmeets@gmail.com>"]
edition = "2018"
license = "GPL-v3-or-later"

[dependencies]
tilemap     = { path = "../../tilemap" }
ui          = { path = "../../ui" }
fractal-toy = { path = "../../fractal" }

glutin    = "0.24.0"
gilrs     = "0.7.4"
memoffset = "0.5.4"
imgui     = "0.4"
imgui-winit-support = "0.4"
imgui-opengl-renderer = "0.8"

[build-dependencies]
gl_generator = "0.14.0"
