[package]
name = "sdl"
version = "0.1.0"
authors = ["TomSmeets <tom.tsmeets@gmail.com>"]
edition = "2018"
license = "GPL-v3-or-later"


[features]
static = [ "sdl2/static-link", "sdl2/bundled" ]

[dependencies]
tilemap     = { path = "../../tilemap" }
ui          = { path = "../../ui" }
fractal-toy = { path = "../../fractal" }
builder-ocl = { path = "../../builder/ocl" }

sdl2  = { version = "0.34", features = [ "unsafe_textures" ] }
serde = { version = "1.0", features = [ "derive" ] }
png   = { version = "0.16" }
crossbeam-channel = { version = "0.4" }
