[package]
name = "learn-winit-gl"
version = "0.1.0"
authors = ["Tom Smeets <tom.tsmeets@gmail.com>"]
edition = "2018"
build   = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24.0"

[build-dependencies]
gl_generator = "0.14.0"
