[package]
name = "learn-winit"
version = "0.1.0"
authors = ["Tom Smeets <tom.tsmeets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]
web = [ "winit/stdweb", "stdweb", "stdweb-derive" ]

[dependencies]
winit = { path = "./winit" }
serde = "1.0.105"
serde_derive = "1.0.105"
gilrs  = "0.7.4"

stdweb = { version = "0.4.13", optional = true }
stdweb-derive = { version = "0.5.3", optional = true }
