[package]
name = "serial"
version = "0.1.0"
authors = ["TomSmeets <tom@tsmeets.nl>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate_type = [ "lib", "cdylib"]

[dependencies]
serde      = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
bincode    = "1.0"
sdl2       = { version = "0.33", features = [ "unsafe_textures" ] }
num        = "0.2"
cgmath     = "0.17"
rand       = "0.7"



# winit      = "0.21"
# glx-hal (or gfx?)
